# traktor-kontrol-s4-mk1-driver-linux

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
classes/: AlsaHelper.cpp  Button.cpp  ConfigHelper.cpp  EvDevEvent.cpp  EvDevHelper.cpp  Jog.cpp  Knob.cpp  Led.cpp  MidiEvent.cpp  MidiEventIn.cpp  MidiEventOut.cpp  MidiHelper.cpp  RtAudioHelper.cpp  RtMidiEvent.cpp  RtMidiHelper.cpp  Slider.cpp  UtilsHelper.cpp
includes/: AlsaHelper.h  Button.h  ConfigHelper.h  EvDevEvent.h  EvDevHelper.h  Jog.h  Knob.h  Led.h  MidiEvent.h  MidiEventIn.h  MidiEventOut.h  MidiHelper.h  RtAudioHelper.h  RtMidiEvent.h  RtMidiHelper.h  Slider.h  UtilsHelper.h  cxxopts.hpp  evdevw.hpp  rapidcsv.h
includes/evdevw/: BusType.hpp  ClockId.hpp  Enum.hpp  Evdev.hpp  Exception.hpp  InputProperty.hpp  LogPriority.hpp  ReadFlag.hpp  ReadStatus.hpp  Type.hpp  UInput.hpp  Utility.hpp
includes/evdevw/Event/: Absolute.hpp  AnyEvent.hpp  Event.hpp  ForceFeedback.hpp  ForceFeedbackStatus.hpp  Key.hpp  Led.hpp  Misc.hpp  Power.hpp  Relative.hpp  Repeat.hpp  Sound.hpp  Switch.hpp  Synchronize.hpp
mappings/mixxx/: Traktor-Kontrol-S4-mk1.js  TraktorKontrol_S4_MK1_JFM.midi.xml
mappings/traktor-kontrol-s4-mk1/: buttons.conf  jogs.conf  konbs.conf  leds.conf  leds.map  sliders.conf  sliders.map
